--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "school-prueba",
+  "name": "examen-frontend",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve --base-href ./",
     "build": "ng build -c production --base-href ./",
     "build:staging": "ng build -c staging --base-href ./",
+    "build:dev": "ng build -c dev --base-href ./",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
